[package]
name = "blitz-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
iced = { version = "0.12.1", features = ["image", "palette", "advanced", "async-std"]}
open = "5.1.2"
image = "0.25.1"
tracing-subscriber = "0.3.18"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
dirs = "5.0.1"
anyhow = "1.0.82"
serde_json = "1.0.116"
reqwest = "0.12.4"
rten = "0.4.0"
rten-imageio = "0.4.0"
rten-tensor = "0.4.0"
serde = { version = "1.0.198", features = ["derive"] }
ocrs = "0.5.0"
fuzzywuzzy = "0.0.2"
xcap = "0.0.8"
log = "0.4.21"
dialog = "0.3.0"